--- a/src/main/resources/application-default-template.yml
+++ b/src/main/resources/application-default-template.yml
@@ -1,3 +1,7 @@
 spring:
   security.user:
-    password: test
+    password: REPLACE-ME
+
+datasource:
+  username: REPLACE-ME
+  password: REPLACE-ME
